@@ -216,6 +216,7 @@
 		
 		<script type="text/javascript" src="js/event/royals/lei.js"></script>
 		<script type="text/javascript" src="js/event/royals/lei-tasks.js"></script>
+		<script type="text/javascript" src="js/event/royals/lei-sex.js"></script>
 		<script type="text/javascript" src="js/event/royals/twins.js"></script>
 		<script type="text/javascript" src="js/event/royals/jeanne.js"></script>
 		<script type="text/javascript" src="js/event/royals/golem.js"></script>
