@@ -9,6 +9,7 @@ Version 0.4k
 ------------
 * Asche's magic box now counts toward purchases for tasks
 * Added quest log entries for Vaughn's second and third task
+* Added Lei's first task + reward (you need to have talked to him about bodyguarding and offered first to get the sexy reward)
 
 --------------------------------------------
              PREVIOUS VERSIONS
